# graphet

./: .gitignore  CMakeLists.txt  README.md  compile.sh  compile_old.sh
src/: Makefile  Makefile.inc  graph.cpp  triangle.cpp
src/app/: Makefile  main.cpp  main_old.cpp
src/graph/: CMakeLists.txt  baselayout.h  forceatlaslayout.cpp  forceatlaslayout.h  graph.cpp  graph.h  testlayout.cpp  testlayout.h
src/libgraphs/: Makefile  graph.cpp
src/librender/: Makefile  particlesystem.cpp  particlesystem.h
src/math/: CMakeLists.txt  symmetric_matrix.cpp  symmetric_matrix.hpp
src/render/: CMakeLists.txt  background.cpp  background.h  camera.cpp  camera.h  glwrapper.cpp  glwrapper.h  particlesystem.cpp  particlesystem.h  renderable.cpp  renderable.h  rendermanager.cpp  rendermanager.h  segmentsystem.cpp  segmentsystem.h
src/ui/: CMakeLists.txt  windowmanager.cpp  windowmanager.h
src/utils/: log.h
test/: CMakeLists.txt  testGraph.cpp  testParticles.cpp  testSymmetricMatrix.cpp
